--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
     <section class="cta">
         <h1>Enroll for our various online courses</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
+        <a href="mailto:akashjayaswal1@email.com" class="hero-btn">CONTACT US</a>
     </section>
     <section class="footer">
         <h4>About us</h4>
